[project]
name = "roman-chebba-agriculture"
version = "0.1.0"
description = "Agriculture data analysis and preprocessing project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "altair>=6.0.0",
    "geopandas>=1.0.1",
    "ipykernel>=6.31.0",
    "isort>=6.1.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.9.4",
    "mesa>=2.4.0",
    "networkx>=3.2.1",
    "numpy>=1.21.0",
    "openpyxl>=3.1.5",
    "pandas>=1.3.0",
    "scikit-learn>=1.6.1",
    "solara>=1.57.4",
    "tensorflow>=2.20.0",
]
